# agar-sila-server

./: .gitignore  AgarController-v1_0.sila.xml  Pipfile  README.md  pyproject.toml  run-checks.py  run-formatting.py  setup.py
agar_station/: server.py
agar_station/feature_implementations/: agarcontroller_impl.py
scripts/: agar-sila.service  start-sila-server.sh
utils/: Application.py
utils/Robot_PC_comm/: abb_connector.py  robot positions.txt
utils/calibration_experiment/: calibration.py  checkerboard_corner.txt  image_points.txt  robot_points.txt  robot_points_13062023.txt
utils/visionLib/: camera_utils.py  coeff.npy  coeff_13062023.npy  coeff_old.npy  coeff_old2.npy  vision_utils.py
