[project]
name = "agar_station"
version = "0.0.0"
requires-python = ">=3.7"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=0.61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agar_station*"]

[tool.setuptools.package-data]
"agar_station.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
